<?xml version="1.0"?>
<package format="2">
    <name>realsense_slam</name>
    <version>0.0.0</version>
    <description>TODO</description>

    <maintainer email="laikago@unitree.cc">TODO</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf</depend>
    <depend>tf2_ros</depend>

</package>
